# giortazi

./: CHANGELOG.md  LICENSE  README.md  giortazi.cabal
.github/workflows/: haskell.yml
app/: Cli.hs  Main.hs
src/: Calendar.hs  OrthodoxEaster.hs  Process.hs  Search.hs  Utils.hs
test/: Spec.hs
