cabal-version:      3.0
name:               giortazi
version:            0.1.0.0
synopsis:           A TUI tool to check nameday dates
-- description:
homepage:           https://github.com/Turtel216/giortazi
license:            MIT
license-file:       LICENSE
author:             Dimitrios Papakonstantinou
maintainer:         papakonstantinou.dm@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Calendar,
                      Process
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      text,
                      aeson,
                      bytestring
    hs-source-dirs:   src
    default-language: Haskell2010

executable giortazi
    import:           warnings
    main-is:          Main.hs
    other-modules:    Cli
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        giortazi,
        brick,
        optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded

test-suite giortazi-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        giortazi
