cabal-version:      3.0
name:               giortazi
version:            0.1.0.0
synopsis:           A simple CLI tool to look up Greek-Orthodox name days
description:        Giortazi is a simple command-line tool to look up Greek Orthodox name days. It provides quick access to name day information directly from your terminal.
homepage:           https://github.com/Turtel216/giortazi
license:            MIT
license-file:       LICENSE
author:             Dimitrios Papakonstantinou
maintainer:         papakonstantinou.dm@gmail.com
-- copyright:
category:           Text
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Calendar,
                      Process,
                      Search,
                      Utils
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      text,
                      aeson,
                      bytestring,
                      time
    hs-source-dirs:   src
    default-language: Haskell2010

executable giortazi
    import:           warnings
    main-is:          Main.hs
    other-modules:    Cli
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        giortazi,
        optparse-applicative,
        time
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded

test-suite giortazi-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.17.2.1,
        giortazi,
        hspec,
        time
